# docs

reference/python/: mkdocs.yml  pyproject.dev.toml  pyproject.toml
reference/python/docs/integrations/: langchain_azure_storage.md
src/: docs.json
src/oss/python/integrations/document_loaders/: azure_blob_storage.mdx  index.mdx
src/oss/python/integrations/providers/: microsoft.mdx
