[project]
name = "langchain-reference-docs"
version = "0.1.0"
description = "LangChain API reference documentation"
requires-python = ">=3.13.0,<4.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    # Core reference build dependencies
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material[imaging]>=9.6.20,<10.0.0",
    "mkdocstrings>=0.24.0,<1.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocs-git-committers-plugin-2>=1.2.0,<2.0.0",
    "mkdocs-git-authors-plugin>=0.10.0,<1.0.0",
    "markdown-callouts>=0.3.0,<1.0.0",
    "markdown-include>=0.8.1,<1.0.0",
    "mkdocs-exclude>=1.0.2,<2.0.0",
    "mkdocs-exclude-search>=0.6.5,<1.0.0",
    "mkdocs-include-markdown-plugin>=7.1.6,<8.0.0",
    # TODO: audit above dependencies
    # I copied them over because they were in LangGraph's
    # Not sure if each were used/apply to this project
    "griffe-warnings-deprecated>=1.1.0,<2.0.0",
    "griffe-inherited-docstrings>=1.1.2,<2.0.0",
    # Python
    "mkdocstrings-python>=1.7.0,<2.0.0",
    # Format / Lint
    "ruff>=0.13.0,<14.0.0",
    # Libraries
    #"langchain-cli",
    "langchain-core",
    "langchain",
    "langchain-classic",
    "langchain-tests",
    "langchain-text-splitters",
    "langchain-anthropic",
    "langchain-chroma",
    "langchain-deepseek",
    "langchain-exa",
    "langchain-fireworks",
    "langchain-groq",
    "langchain-huggingface",
    "langchain-mistralai",
    "langchain-nomic",
    "langchain-ollama",
    "langchain-openai",
    "langchain-perplexity",
    "langchain-prompty",
    "langchain-qdrant",
    "langchain-xai",
    #"langchain-experimental",
    "langchain-community",
    "langchain-mcp-adapters",
    "langchain-astradb",
    #"langchain-ai21",
    "langchain-aws",
    "langchain-azure-ai",
    #"langchain-azure-dynamic-sessions",
    "langchain-azure-storage",
    #"langchain-cerebras",
    #"langchain-cohere",
    #"langchain-db2",
    #"langchain-elasticsearch",
    "langchain-google-community",
    "langchain-google-genai",
    "langchain-google-vertexai",
    #"langchain-ibm",
    #"langchain-milvus",
    #"langchain-neo4j",
    #"langchain-nvidia-ai-endpoints",
    #"langchain-pinecone",
    #"langchain-postgres",
    #"langchain-redis",
    #"langchain-sema4",
    #"langchain-snowflake",
    #"langchain-sqlserver",
    #"langchain-together",
    #"langchain-unstructured",
    #"langchain-upstage",
    #"langchain-weaviate",
    "langchain-tavily",
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "langgraph-sdk",
    #"langgraph-supervisor",
    #"langgraph-swarm",
    "langgraph-checkpoint-aws",
    "langsmith",
    "deepagents"
]


[tool.uv]
package = false
# Use copy mode instead of hardlink to avoid filesystem compatibility issues
# This is necessary for CI/CD environments like Vercel where cache and target
# directories may be on different filesystems
link-mode = "copy"
override-dependencies = [
    "pytest-codspeed>=3.1.0,<4.0.0",
]

[tool.uv.sources]
# Remote installs for prod

## LangChain monorepo packages (alphabetical)
### Top level
#langchain-cli = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/cli" }
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
langchain = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain_v1" }
langchain-classic = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain" }
langchain-tests = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/standard-tests" }
langchain-text-splitters = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters" }

### Partners
langchain-anthropic = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/anthropic" }
langchain-chroma = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/chroma" }
langchain-deepseek = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/deepseek" }
langchain-exa = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/exa" }
langchain-fireworks = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/fireworks" }
langchain-groq = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/groq" }
langchain-huggingface = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/huggingface" }
langchain-mistralai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/mistralai" }
langchain-nomic = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/nomic" }
langchain-ollama = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/ollama" }
langchain-openai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/openai" }
langchain-perplexity = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/perplexity" }
langchain-prompty = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/prompty" }
langchain-qdrant = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/qdrant" }
langchain-xai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/xai" }

## Experimental
#langchain-experimental = { git = "https://github.com/langchain-ai/langchain-experimental.git", subdirectory = "libs/experimental" }

## Community
langchain-community = { git = "https://github.com/langchain-ai/langchain-community.git", subdirectory = "libs/community" }

## MCP
langchain-mcp-adapters = { git = "https://github.com/langchain-ai/langchain-mcp-adapters.git" }

## Other langchain-ai org packages (alphabetical)
langchain-astradb = { path = "../../../langchain-datastax/libs/astradb", editable = true }
langchain-ai21 = { path = "../../../langchain-ai21/libs/ai21", editable = true }
langchain-aws = { path = "../../../langchain-aws/libs/aws", editable = true }
langchain-azure-ai = { path = "../../../langchain-azure/libs/azure-ai", editable = true }
langchain-azure-dynamic-sessions = { path = "../../../langchain-azure/libs/azure-dynamic-sessions", editable = true }
langchain-azure-storage = { path = "../../../langchain-azure/libs/azure-storage", editable = true }
langchain-cerebras = { path = "../../../langchain-cerebras/libs/cerebras", editable = true }
langchain-cohere = { path = "../../../langchain-cohere/libs/cohere", editable = true }
langchain-db2 = { path = "../../../langchain-ibm/libs/langchain-db2", editable = true }
langchain-elasticsearch = { path = "../../../langchain-elastic/libs/elasticsearch", editable = true }
langchain-google-community = { path = "../../../langchain-google/libs/community", editable = true }
langchain-google-genai = { path = "../../../langchain-google/libs/genai", editable = true }
langchain-google-vertexai = { path = "../../../langchain-google/libs/vertexai", editable = true }
langchain-ibm = { path = "../../../langchain-ibm/libs/ibm", editable = true }
langchain-milvus = { path = "../../../langchain-milvus/libs/milvus", editable = true }
langchain-mongodb = { path = "../../../langchain-mongodb/libs/langchain-mongodb", editable = true }
langchain-neo4j = { path = "../../../langchain-neo4j/libs/neo4j", editable = true }
langchain-nvidia-ai-endpoints = { path = "../../../langchain-nvidia/libs/ai-endpoints", editable = true }
langchain-pinecone = { path = "../../../langchain-pinecone/libs/pinecone", editable = true }
langchain-postgres = { path = "../../../langchain-postgres", editable = true }
langchain-redis = { path = "../../../langchain-redis/libs/redis", editable = true }
langchain-sema4 = { path = "../../../langchain-sema4/libs/sema4", editable = true }
langchain-snowflake = { path = "../../../langchain-snowflake/libs/snowflake", editable = true }
langchain-sqlserver = { path = "../../../langchain-azure/libs/sqlserver", editable = true }
langchain-together = { path = "../../../langchain-together/libs/together", editable = true }
langchain-unstructured = { path = "../../../langchain-unstructured/libs/unstructured", editable = true }
langchain-upstage = { path = "../../../langchain-upstage/libs/upstage", editable = true }
langchain-weaviate = { path = "../../../langchain-weaviate/libs/weaviate", editable = true }

## Non-langchain-ai org packages (alphabetical)
langchain-tavily = { git = "https://github.com/tavily-ai/langchain-tavily.git" }

## LangGraph monorepo packages (alphabetical)
langgraph = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/langgraph" }
langgraph-prebuilt = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/prebuilt" }
langgraph-checkpoint = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint" }
langgraph-checkpoint-sqlite = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint-sqlite" }
langgraph-checkpoint-postgres = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint-postgres" }
langgraph-sdk = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/sdk-py" }

# External repos (alphabetical)
langgraph-supervisor = { git = "https://github.com/langchain-ai/langgraph-supervisor-py" }
langgraph-swarm = { git = "https://github.com/langchain-ai/langgraph-swarm-py" }
langgraph-checkpoint-aws = { git = "https://github.com/langchain-ai/langchain-aws.git", subdirectory = "libs/langgraph-checkpoint-aws" }

# LangSmith
langsmith = { git = "https://github.com/langchain-ai/langsmith-sdk.git", subdirectory = "python" }

# Deep Agents
deepagents = { git = "https://github.com/langchain-ai/deepagents.git" }
